<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activities.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="180dp"
                    android:layout_height="158dp"
                    android:src="@mipmap/virus"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.today.covid_19puntoscriticos.Config.JustifyTextView


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/info_app"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />
            </LinearLayout>


            <LinearLayout
                android:background="@drawable/line_divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>

            <LinearLayout
                android:background="@color/colorISTG"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/asistent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/correo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:background="@drawable/line_divider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/club"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>

                <TextView

                    android:fontFamily="sans-serif-condensed"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/director"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name_director"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
                <TextView
                    android:fontFamily="sans-serif-condensed"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/desarrolladores"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name_dev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
                <TextView
                    android:fontFamily="sans-serif-condensed"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/documentacion"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name_doc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
                <TextView
                    android:fontFamily="sans-serif-condensed"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/colaboradores"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name_cob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>