<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/session"
        android:icon="@drawable/ic_account"
        android:title="account"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/myDiagnosis"
                android:orderInCategory="100"
                android:icon="@drawable/ic_my_diagnosis"
                android:title="@string/myDiagnosis"
                app:showAsAction="never" />
            <item
                android:icon="@drawable/ic_poll"
                android:id="@+id/poll"
                android:orderInCategory="100"
                android:title="@string/Poll"
                app:showAsAction="never" />
            <item
                android:icon="@drawable/ic_info"
                android:id="@+id/aboutUs"
                android:orderInCategory="100"
                android:title="@string/Info"
                app:showAsAction="never" />
            <item
                android:icon="@drawable/ic_sign_out"
                android:id="@+id/signOut"
                android:orderInCategory="100"
                android:title="@string/Sign_out"
                app:showAsAction="never" />
        </menu>



    </item>


</menu>