<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Spinner
            android:id="@+id/spinnerEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/genr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Spinner
            android:id="@+id/spinnerGenr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <Button
            android:id="@+id/save_range"
            android:text="@string/save_poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>

</LinearLayout>